将自动暂停和手动暂停的做区分.且持久化手动暂停的区块.